<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blueETH"
        tools:context=".MainActivity">

    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:outlineSpotShadowColor="@color/whiteETH"
            android:id="@+id/spinner" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/totalcoin"
            android:layout_width="174dp"
            android:layout_height="65dp"
            android:id="@+id/totalcoin_main" android:layout_marginBottom="8dp"
            android:textColor="@color/whiteETH"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.251"
            android:textStyle="bold|italic" android:textSize="24sp"/>
    <TextView
            android:text="@string/clicktask"
            android:layout_width="127dp"
            android:layout_height="46dp"
            android:textColor="@color/whiteETH"
            android:textStyle="bold|italic" android:textSize="18sp"
            android:id="@+id/clicktask" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/totalcoin_main" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.502"
            android:drawableTop="@android:drawable/arrow_up_float" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/clickhelp"
            android:layout_height="43dp"
            android:id="@+id/help"
            android:textColor="@color/whiteETH"
            android:textStyle="bold|italic" android:textSize="18dp"
            android:background="@color/blueETHlight"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
            android:layout_width="0dp"/>
    <TextView
            android:text="@string/user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteETH"
            android:textStyle="bold|italic" android:textSize="18sp"
            android:id="@+id/user_id_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/totalcoin_main"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteETH"
            android:textStyle="bold|italic" android:textSize="18dp"
            android:background="@color/blueETHlight"
            android:id="@+id/review_btn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/upload"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:textColor="@color/whiteETH"
            android:textStyle="bold|italic" android:textSize="18dp"
            android:background="@color/blueETHlight"
            android:id="@+id/upload_btn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/user_id_text" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/review_btn" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
            android:text="@string/load_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteETH"
            android:textStyle="bold|italic" android:textSize="18sp"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/upload_btn"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/user_id_text"
            app:layout_constraintVertical_bias="0.157" app:layout_constraintHorizontal_bias="0.533"/>

    <CheckBox
            android:text="@string/track_load"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:textColor="@color/whiteETH"
            android:textStyle="bold|italic" android:textSize="18sp"
            android:id="@+id/track_box"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/upload_btn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintVertical_bias="0.108"/>
    <CheckBox
            android:text="@string/treasure_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteETH"
            android:textStyle="bold|italic" android:textSize="18sp"
            android:id="@+id/treasure_box"
            app:layout_constraintStart_toEndOf="@+id/track_box"
            android:layout_marginStart="12dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/upload_btn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintVertical_bias="0.085"/>

</android.support.constraint.ConstraintLayout>