<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blueETH"
        tools:context=".CompassActivity">
    <TextView
            android:text="@string/totalcoin"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:textColor="@color/whiteETH"
            android:textStyle="bold|italic" android:textSize="18sp"
            android:textAlignment="center"
            android:id="@+id/totalcoin" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:text="@string/header1"
            android:textColor="@color/whiteETH"
            android:textAlignment="center"
            android:textStyle="bold" android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="48dp" android:id="@+id/treasureNameText" android:baselineAligned="false"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout1" app:layout_constraintTop_toTopOf="@+id/totalcoin"
            android:layout_marginTop="8dp" app:layout_constraintVertical_bias="1.0"
            tools:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.501"/>
    <TableLayout
            android:layout_width="345dp"
            android:layout_height="68dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintVertical_bias="1.0" android:id="@+id/tableLayout1">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/coin"
                    android:layout_width="wrap_content"
                    android:textColor="@color/whiteETH"
                    android:textStyle="bold" android:textSize="16sp"
                    android:layout_height="match_parent" android:id="@+id/maxcoinText"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/lat"
                    android:layout_width="178dp"
                    android:textColor="@color/whiteETH"
                    android:textStyle="bold" android:textSize="16sp"
                    android:layout_height="match_parent" android:id="@+id/latText"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/lon"
                    android:layout_width="265dp"
                    android:textColor="@color/whiteETH"
                    android:textStyle="bold" android:textSize="16sp"
                    android:layout_height="29dp" android:id="@+id/lonText"/>
        </TableRow>
    </TableLayout>
    <TableLayout
            android:layout_width="347dp"
            android:layout_height="86dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.523"
            android:id="@+id/tableLayout2" app:layout_constraintVertical_bias="0.388">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="Distance"
                    android:layout_width="175dp"
                    android:textColor="@color/whiteETH"
                    android:textStyle="bold" android:textSize="16sp"
                    android:layout_height="wrap_content" android:id="@+id/distHeader"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:textColor="@color/whiteETH"
                    android:textStyle="bold" android:textSize="16sp"
                    android:layout_height="wrap_content" android:id="@+id/distText"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="Bearing"
                    android:layout_width="179dp"
                    android:textColor="@color/whiteETH"
                    android:textStyle="bold" android:textSize="16sp"
                    android:layout_height="wrap_content" android:id="@+id/bearingHeader"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:textColor="@color/whiteETH"
                    android:textStyle="bold" android:textSize="16sp"
                    android:layout_height="wrap_content" android:id="@+id/bearingText"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="Temperature"
                    android:layout_width="wrap_content"
                    android:textColor="@color/whiteETH"
                    android:textStyle="bold" android:textSize="16sp"
                    android:layout_height="wrap_content" android:id="@+id/tempHeader"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:textColor="@color/whiteETH"
                    android:textStyle="bold" android:textSize="16sp"
                    android:layout_height="wrap_content" android:id="@+id/tempText"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="Speed"
                    android:layout_width="wrap_content"
                    android:textColor="@color/whiteETH"
                    android:textStyle="bold" android:textSize="16sp"
                    android:layout_height="wrap_content" android:id="@+id/speedHeader"/>
            <TextView
                    android:text="@string/speedPlaceholder"
                    android:layout_width="wrap_content"
                    android:textColor="@color/whiteETH"
                    android:textStyle="bold" android:textSize="16sp"
                    android:layout_height="wrap_content" android:id="@+id/speedText"/>
        </TableRow>
    </TableLayout>

    <TextView
            android:text="@string/geofence_txt"
            android:layout_width="250dp"
            android:layout_height="54dp"
            android:textColor="@color/whiteETH"
            android:textStyle="bold|italic" android:textSize="18sp"
            android:textAlignment="center"
            android:id="@+id/geoText" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"/>

    <ImageView
            android:layout_width="61dp"
            android:layout_height="84dp" app:srcCompat="@drawable/guide_arrow"
            android:id="@+id/arrow" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/geoText" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/backBtn" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.501"/>

    <Button
            android:text="@string/goback"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/backBtn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="@color/whiteETH"
            android:textStyle="bold|italic" android:textSize="18dp"
            android:background="@color/blueETHlight"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/geoText"
            app:layout_constraintHorizontal_bias="0.502" app:layout_constraintVertical_bias="1.0"/>
</android.support.constraint.ConstraintLayout>