<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blueETH"
        tools:context=".WelcomeActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="347dp"
            android:background="@drawable/zelda_logo2"
            android:layout_height="254dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout" android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.523" app:layout_constraintVertical_bias="0.257">

    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="383dp"
            android:layout_height="513dp"
            android:id="@+id/constraintLayout" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
        <TextView
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/blueETH"
                android:textColor="@color/whiteETH"
                android:textStyle="bold|italic"
                android:id="@+id/login_text" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/welcomeBtn" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.118"
                app:layout_constraintVertical_bias="0.886"/>
        <EditText
                android:layout_width="157dp"
                android:layout_height="49dp"
                android:inputType="textPersonName"
                android:text="@string/login_text"
                android:ems="10"
                android:id="@+id/user_id"
                android:shadowColor="@color/blueETH"
                android:textColor="@color/whiteETH"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toEndOf="@+id/login_text" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/welcomeBtn"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.117" app:layout_constraintVertical_bias="0.911"/>
        <Button
                android:text="@string/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/blueETH"
                android:textColor="@color/whiteETH"
                android:textStyle="bold|italic"
                android:background="@color/blueETHlight"
                android:id="@+id/login_button" android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/user_id" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/welcomeBtn" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.909"/>
        <Button
                android:text="@string/welcome"
                android:shadowColor="@color/blueETH"
                android:textColor="@color/whiteETH"
                android:layout_width="384dp"
                android:layout_height="74dp"
                android:id="@+id/welcomeBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/blueETH" android:textStyle="bold|italic"
                android:cursorVisible="true"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>